# VeriSpeed

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md  VeriSpeed.jucer  toolchain-mingw.cmake
.claude/: settings.local.json
.github/workflows/: build.yml
Source/: PillButton.cpp  PillButton.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VUMeter.cpp  VUMeter.h
build-win/: CMakeCache.txt  Makefile  cmake_install.cmake
build-win/JUCE/: Makefile  cmake_install.cmake
build-win/JUCE/modules/: Makefile  cmake_install.cmake
build-win/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-win/JUCE/tools/modules/: Makefile  cmake_install.cmake
build-win/VeriSpeed_artefacts/JuceLibraryCode/: JuceHeader.h  VeriSpeed_resources.rc
